--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
 	<p>Mais um parágrafo para demonstrar o HTML</p>
 	<h2>Mais um teste</h2>
 	<P>Teste 3o parágrafo</P>
+	<h2>Teste com Sincronia de contas</h2>
+	<P>Teste 4o parágrafo</P>
 </body>
 </html>
